feat: verify existence of bad requests when updating pipeline